--- a/faq.html
+++ b/faq.html
@@ -22,29 +22,15 @@ title: FAQs
         <p>
           No, a juvenile record is not a criminal conviction, even if you were “found guilty” in juvenile court.
         </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="panel-group" id="q2">
-  <div class="panel panel-default">
-    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q2" href="#collapse2">
-      <h4>
-        <i class="fa fa-chevron-circle-right fa-lg plusminus"></i>
-        If a job application asks you about criminal convictions, you should not reveal your juvenile record.  If you think a job, a college, or a landlord has seen your juvenile record, contact us:
-      </h4>
-      <div class='clearfix'></div>
-    </div>
-    <div id="collapse2" class="panel-collapse collapse">
-      <div class="panel-body">
+        <p>If a job application asks you about criminal convictions, you should not reveal your juvenile record.  If you think a job, a college, or a landlord has seen your juvenile record, contact us:
+		</p>
         <p><a href="{{ site.baseurl }}/applying.html" class="btn btn-default">Learn more & Contact Us &nbsp;<i class="fa fa-chevron-right"></i></a></p>
       </div>
     </div>
   </div>
 </div>
 
-<div class="panel-group" id="q3">
+<div class="panel-group" id="q2">
   <div class="panel panel-default">
     <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q3" href="#collapse3">
       <h4>
@@ -68,7 +54,7 @@ title: FAQs
   </div>
 </div>
 
-<div class="panel-group" id="q4">
+<div class="panel-group" id="q3">
   <div class="panel panel-default">
     <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q4" href="#collapse4">
       <h4>
@@ -87,7 +73,7 @@ title: FAQs
   </div>
 </div>
 
-<div class="panel-group" id="q5">
+<div class="panel-group" id="q4">
   <div class="panel panel-default">
     <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q5" href="#collapse5">
       <h4>
@@ -106,7 +92,7 @@ title: FAQs
   </div>
 </div>
 
-<div class="panel-group" id="q6">
+<div class="panel-group" id="q5">
   <div class="panel panel-default">
     <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q6" href="#collapse6">
       <h4>
@@ -130,7 +116,6 @@ title: FAQs
   <ul>
     <li><a href="http://www.beforeyouplea.com/?q=ct">Before You Plea - Connecticut</a></li>
     <li><a href="http://jud.ct.gov/juv_infoguide/IJCP_CourtRecords.html">Judicial Guide to Juvenile Court Proceedings</a></li>
-    <li><a href="http://www.ct.gov/bopp">Connecticut Board of Pardons & Paroles</a></li>
   </ul>
 </div>
 
