--- a/services.html
+++ b/services.html
@@ -48,20 +48,20 @@ Wilton
 <br>
 
 <h3>
-Face Forward 3 Services Include:
+Services Include:
 </h3>
 
 <ul>
-<li>Creating & implementing an individual career plan with appropriate education and training goals</li>
-<li>Occupational skills training in demand industries leading to industry recognized credentials</li>
-<li>Creation of an electronic portfolio to store career guidance and labor market information</li>
-<li>Workforce activities which lead to employment in construction, healthcare or transportation industries</li>
-<li>Educational interventions including high school completion, tutoring and or ABE/GED preparation</li>
-<li>Comprehensive case management services, including family supports</li>
-<li>Supportive coaching from a mentor</li>
-<li>Service learning projects to build workforce development skills</li>
-<li>Legal Services to complete expungement and/or erasure of juvenile records when eligible</li>
-<li>Follow up services for 9 months (which may include: resolution of problems in school or work, assistance in securing better paying employment, furthering education, leadership development, etc.)</li>
+<li>Creating a career plan with education and training goals.</li>
+<li>Occupational skills training in demand jobs, leading to industry recognized credentials.</li>
+<li>Information about  jobs that are in demand.</li>
+<li>Activities that lead to jobs in construction, healthcare or transportation.</li>
+<li>Help finishing high school such as  tutoring and or ABE/GED preparation.</li>
+<li>Case management services, including family supports.</li>
+<li>Coaching from a mentor.</li>
+<li>Connection to service learning projects to develop work skills.</li>
+<li>Legal Services to erase juvenile records when eligible.</li>
+<li>Follow up services for 9 months (which may include help:  working out problems in school or at work; getting a better paying job;  furthering your education; and building leadership skills, etc.).</li>
 </ul>
 
 <br>
