--- a/disclaimer.html
+++ b/disclaimer.html
@@ -5,7 +5,7 @@ title: Disclaimer
 
 <h2>DISCLAIMER</h2>
 <p>
-  This site <i><b>does not substitute for legal aid</b></i>.
+  This is a screening tool and is not intended to be legal advice.
   <a href="{{ site.baseurl }}/applying"><b>Find out</b></a> how you may be able to get free help from a lawyer.
 </p>
 
