--- a/questions/yearsdischarged.html
+++ b/questions/yearsdischarged.html
@@ -10,4 +10,8 @@ ans2_val: 'No'
 ans2_next: results/juvwaitperiod
 
 notsure_option: True
+
+<p>What is a serious juvenile offense?</p>
+<a href="{{ site.baseurl }}/offenses.html">View a List of Offenses</a>
+
 ---
