--- a/questions/yearsdischarged.html
+++ b/questions/yearsdischarged.html
@@ -11,7 +11,7 @@ ans2_next: results/juvwaitperiod
 
 notsure_option: True
 
-<p>What is a serious juvenile offense?</p>
-<a href="{{ site.baseurl }}/offenses.html">View a List of Offenses</a>
-
 ---
+
+<p>What is a serious juvenile offense?</p>
+<p><a href="{{ site.baseurl }}/offenses.html">View a List of Offenses</a></p>
