--- a/questions/yearsdischarged.html
+++ b/questions/yearsdischarged.html
@@ -13,5 +13,5 @@ notsure_option: True
 
 ---
 
-<p>What is a serious juvenile offense?</p>
-<p><a href="{{ site.baseurl }}/offenses.html">View a List of Offenses</a></p>
+<p>What is a serious juvenile offense?<br>
+<a href="{{ site.baseurl }}/offenses.html">View a List of Offenses</a></p>
