--- a/faq.html
+++ b/faq.html
@@ -111,6 +111,26 @@ title: FAQs
   </div>
 </div>
 
+
+<div class="panel-group" id="q6">
+  <div class="panel panel-default">
+    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q6" href="#collapse6">
+      <h4>
+        <i class="fa fa-chevron-circle-right fa-lg plusminus"></i>
+        What is a serious juvenile offense?
+      </h4>
+      <div class='clearfix'></div>
+    </div>
+    <div id="collapse6" class="panel-collapse collapse">
+      <div class="panel-body">
+        <p>
+        <p><a href="{{ site.baseurl }}/offenses.html" class="btn btn-default">List of Offenses &nbsp;<i class="fa fa-chevron-right"></i></a></p>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="well">
   <h4>Interested in learning more about juvenile justice and erasure?  Check out these links:</h4>
   <ul>
