--- a/faq.html
+++ b/faq.html
@@ -32,14 +32,14 @@ title: FAQs
 
 <div class="panel-group" id="q2">
   <div class="panel panel-default">
-    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q3" href="#collapse3">
+    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q2" href="#collapse2">
       <h4>
         <i class="fa fa-chevron-circle-right fa-lg plusminus"></i>
         After I find out I am eligible to petition for erasure of my juvenile record in Connecticut, what should I do?
       </h4>
       <div class='clearfix'></div>
     </div>
-    <div id="collapse3" class="panel-collapse collapse">
+    <div id="collapse2" class="panel-collapse collapse">
       <div class="panel-body">
         <p>Remember that free legal help may be available to help you complete the process!</p>
 		<p><a href="{{ site.baseurl }}/applying.html" class="btn btn-default">Learn more & Contact Us &nbsp;<i class="fa fa-chevron-right"></i></a></p>
@@ -56,14 +56,14 @@ title: FAQs
 
 <div class="panel-group" id="q3">
   <div class="panel panel-default">
-    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q4" href="#collapse4">
+    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q3" href="#collapse3">
       <h4>
         <i class="fa fa-chevron-circle-right fa-lg plusminus"></i>
         How do I get a copy of my juvenile record?
       </h4>
       <div class='clearfix'></div>
     </div>
-    <div id="collapse4" class="panel-collapse collapse">
+    <div id="collapse3" class="panel-collapse collapse">
       <div class="panel-body">
         <p>
           You can request a copy of your juvenile record from the police department or the juvenile court closest to where the incident occurred.  You can make the request in writing or you can go to the clerk’s office in juvenile court or to the records department at the police station.
@@ -75,14 +75,14 @@ title: FAQs
 
 <div class="panel-group" id="q4">
   <div class="panel panel-default">
-    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q5" href="#collapse5">
+    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q4" href="#collapse4">
       <h4>
         <i class="fa fa-chevron-circle-right fa-lg plusminus"></i>
         How much does it cost to Petition to have my juvenile record erased?
       </h4>
       <div class='clearfix'></div>
     </div>
-    <div id="collapse5" class="panel-collapse collapse">
+    <div id="collapse4" class="panel-collapse collapse">
       <div class="panel-body">
         <p>
           There is no fee to file the Petition.
@@ -94,14 +94,14 @@ title: FAQs
 
 <div class="panel-group" id="q5">
   <div class="panel panel-default">
-    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q6" href="#collapse6">
+    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q5" href="#collapse5">
       <h4>
         <i class="fa fa-chevron-circle-right fa-lg plusminus"></i>
         What are the chances that my Petition to have my juvenile record erased will be granted?
       </h4>
       <div class='clearfix'></div>
     </div>
-    <div id="collapse6" class="panel-collapse collapse">
+    <div id="collapse5" class="panel-collapse collapse">
       <div class="panel-body">
         <p>
          If you meet the eligibility criteria, Connecticut law requires the court to grant your Petition. 
@@ -124,7 +124,7 @@ title: FAQs
     <div id="collapse6" class="panel-collapse collapse">
       <div class="panel-body">
         <p>
-        <p><a href="{{ site.baseurl }}/offenses.html" class="btn btn-default">List of Offenses &nbsp;<i class="fa fa-chevron-right"></i></a></p>
+        <a href="{{ site.baseurl }}/offenses.html" class="btn btn-default">List of Offenses &nbsp;<i class="fa fa-chevron-right"></i></a>
         </p>
       </div>
     </div>
