--- a/faq.html
+++ b/faq.html
@@ -131,6 +131,30 @@ title: FAQs
   </div>
 </div>
 
+
+<div class="panel-group" id="q7">
+  <div class="panel panel-default">
+    <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#q7" href="#collapse7">
+      <h4>
+        <i class="fa fa-chevron-circle-right fa-lg plusminus"></i>
+        I have another  legal problem.  Where can I get help?
+      </h4>
+      <div class='clearfix'></div>
+    </div>
+    <div id="collapse7" class="panel-collapse collapse">
+      <div class="panel-body">
+        <p>
+        <p>People with very low income can find help at:</p>
+		<ul>
+		<li><a href="http://ctlawhelp.org">ctlawhelp.org</a></li>
+		<li><a href="http://slsct.org">Statewide Legal Services</a> 1-800-453-3320</li>
+		<li><a href="http://connlegalservices.org">Connecticut Legal Services Website connlegalservices.org</a></li>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="well">
   <h4>Interested in learning more about juvenile justice and erasure?  Check out these links:</h4>
   <ul>
