--- a/faq.html
+++ b/faq.html
@@ -146,9 +146,9 @@ title: FAQs
         <p>
         <p>People with very low income can find help at:</p>
 		<ul>
-		<li><a href="http://ctlawhelp.org">ctlawhelp.org</a></li>
-		<li><a href="http://slsct.org">Statewide Legal Services</a> 1-800-453-3320</li>
-		<li><a href="http://connlegalservices.org">Connecticut Legal Services Website connlegalservices.org</a></li>
+		<li><a href="http://ctlawhelp.org">CTLawHelp</a></li>
+		<li><a href="http://slsct.org">Statewide Legal Services</a> (800) 453-3320</li>
+		<li><a href="http://connlegalservices.org">Connecticut Legal Services</a></li>
         </p>
       </div>
     </div>
