--- a/results/notsure.html
+++ b/results/notsure.html
@@ -3,7 +3,7 @@ layout: page
 ---
 
 <h3>
-	Based on your answers, it’s unclear if you were arrested as a juvenile or as an adult.
+Based on your answers, it is unclear how long it has been since you completed what the court ordered you to do. You will need to get a copy of your juvenile record.
 </h3>
 <br>
 <div class="well well-sm">
