--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ A juvenile record does not go away on its own. You are better off without one be
 <p>
   There are attorneys who can help you get your record erased, for free!
 </p>
-<p><img src="/images/ErasURecord.png"></p>
+<p><img src="{{ site.baseurl }}/images/ErasURecord.png"></p>
 
 <br/><br/>
 
