--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ A juvenile record does not go away on its own. You are better off without one be
 
 <hr/>
 <p>
-    Know someone with a juvenile record? Help out by sharing erasure!&nbsp;&nbsp;&nbsp;
-    <a href="https://twitter.com/intent/tweet?text=If%20you%20have%20a%20juvenile%20record%2C%20you%20may%20be%20able%20to%20expunge%20it.%20Check%20out%20%23expungeio!&amp;tw_p=tweetbutton&amp;url=http%3A%2F%2Fexpunge.io">
+    Know someone with a juvenile record? Help out by sharing ErasURecord!&nbsp;&nbsp;&nbsp;
+    <a href="https://twitter.com/intent/tweet?text=If%20you%20have%20a%20juvenile%20record%2C%20you%20may%20be%20able%20to%20erase%20it.%20Check%20out%20%23ErasURecord!&amp;tw_p=tweetbutton&amp;url=http%3A%2F%2Fexpunge.io">
     	<i class="fa fa-twitter"></i>
     </a>
     <a href="https://www.facebook.com/sharer/sharer.php?app_id=309437425817038&amp;sdk=joey&amp;u=http%3A%2F%2Fexpunge.io" target="_blank">
