--- a/disclaimer.html
+++ b/disclaimer.html
@@ -10,7 +10,7 @@ title: Disclaimer
 </p>
 
 <p>
-  By using erasure, you agree to the
+  By using ErasURecord, you agree to the
   <button class="btn-link" data-toggle="modal" data-target="#privacy-policy">
     privacy policy
   </button> and
