--- a/results/notsure.html
+++ b/results/notsure.html
@@ -8,7 +8,7 @@ Based on your answers, it is unclear how long it has been since you completed wh
 <br>
 <div class="well well-sm">
 <p>
-You will need to ask the juvenile court if you have a juvenile record.  Make a request for your juvenile record, in writing, to the Clerk, Juvenile Court in the court nearest to where you were arrested. 
+Ask the juvenile court if you have a juvenile record.  Make a request for your juvenile record, in writing, to the Clerk, Juvenile Court in the court nearest to where you were arrested. 
 </p>
 </div>
 
