--- a/applying.html
+++ b/applying.html
@@ -5,7 +5,7 @@ title: Free Legal Help & Information on Applying
 
 <br><br>
 <p>
-  If you are between 18 & 24 and live in one of the towns listed below you can get free help making sure your juvenile record is not revealed by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
+  If you are between 18 & 24 and live in one of the towns listed below you can get free help to erase your juvenile record by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
 </p>
 
 <br><br>
