--- a/results/juvrecord.html
+++ b/results/juvrecord.html
@@ -5,6 +5,50 @@ layout: page
 <h2>Based on your answers, you were arrested as a juvenile.  It’s likely that you’ll be eligible to erase your record!</h2>
 <br>
 
+<br><br>
+<p>
+  If you are between 18 & 24 and live in one of the towns listed below, you can get free help to erase your juvenile record by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
+</p>
+
+<br><br>
+
+<style> 
+.column {
+    -webkit-columns: 3; /* Chrome, Safari, Opera */
+    -moz-columns: 3; /* Firefox */
+    columns: 3;
+}
+</style>
+
+<div class="column">
+Ansonia<br>
+Beacon Falls<br>
+Bridgeport<br>
+Darien<br>
+Derby<br>
+Easton<br>
+Fairfield<br>
+Greenwich<br>
+Monroe<br>
+New Canaan<br>
+Norwalk<br>
+Oxford<br>
+Seymour<br>
+Shelton<br>
+Stamford<br>
+Stratford<br>
+Trumbull<br>
+Weston<br>
+Westport<br>
+Wilton
+</div>
+
+<br><br>
+
+<p><i>
+  Or fill out the form below
+</i></p>
+<br>
 
 <div id="wufoo-zw3j0vr1rkrzdh">
 Fill out my <a href="https://erasurect.wufoo.com/forms/zw3j0vr1rkrzdh">online form</a>.
@@ -27,10 +71,8 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 })(document, 'script');</script>
 
 
+<br>
+
 <p>
   After you submit this form, a case manager from the WorkPlace, Face Forward  program will try to contact you at the phone number you provided. They will help you confirm that you are eligible for juvenile expungement, and then they will refer you to a lawyer at Connecticut Legal Services for help petitioning to erase your juvenile record.
 </p>
-
-<a href="{{ site.baseurl }}/applying.html" class="btn btn-success">
-  Learn more about how to apply for erasure
-</a>
