--- a/results/applypetition.html
+++ b/results/applypetition.html
@@ -5,26 +5,25 @@ layout: page
 <h3>You will need to get in touch with legal help to see if you have a good reason to petition for erasure earlier than normally allowed.</h3>
 <br>
 
-
-<div id="wufoo-z1qurfjk1buq7uw">
-  Fill out my <a href="https://juvenileexpungementhelpdesk.wufoo.com/forms/z1qurfjk1buq7uw">online form</a>.
+<div id="wufoo-zw3j0vr1rkrzdh">
+Fill out my <a href="https://erasurect.wufoo.com/forms/zw3j0vr1rkrzdh">online form</a>.
 </div>
-<script type="text/javascript">var z1qurfjk1buq7uw;(function(d, t) {
-   var s = d.createElement(t), options = {
-     'userName':'juvenileexpungementhelpdesk',
-     'formHash':'z1qurfjk1buq7uw',
-     'autoResize':true,
-     'height':'484',
-     'async':true,
-     'host':'wufoo.com',
-     'header':'show',
-     'ssl':true};
-   s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
-   s.onload = s.onreadystatechange = function() {
-     var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-     try { z1qurfjk1buq7uw = new WufooForm();z1qurfjk1buq7uw.initialize(options);z1qurfjk1buq7uw.display(); } catch (e) {}};
-   var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
- })(document, 'script');</script>
+<script type="text/javascript">var zw3j0vr1rkrzdh;(function(d, t) {
+var s = d.createElement(t), options = {
+'userName':'erasurect',
+'formHash':'zw3j0vr1rkrzdh',
+'autoResize':true,
+'height':'545',
+'async':true,
+'host':'wufoo.com',
+'header':'show',
+'ssl':true};
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+s.onload = s.onreadystatechange = function() {
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+try { zw3j0vr1rkrzdh = new WufooForm();zw3j0vr1rkrzdh.initialize(options);zw3j0vr1rkrzdh.display(); } catch (e) {}};
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+})(document, 'script');</script>
 
 <p>
 After you submit this form, a case manager from the WorkPlace, Face Forward  program will try to contact you at the phone number you provided. They will help you confirm that you are eligible for juvenile expungement, and then they will refer you to a lawyer at Connecticut Legal Services for help petitioning to erase your juvenile record.
