--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ A juvenile record does not go away on its own. You are better off without one be
   Applying for juvenile erasure
 </h2>
 <p>
-  There are attorneys who can help you get your record erased, for free!
+  There are attorneys who may be able to help you get your record erased, for free!
 </p>
 
 <br/><br/>
