--- a/results/juvrecord.html
+++ b/results/juvrecord.html
@@ -6,7 +6,7 @@ layout: page
 <br>
 
 <p>
-  If you are between 18 & 24 and live in one of the towns listed below, you can get free help to erase your juvenile record by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
+  If you are between 18 & 24 and live in one of the towns listed below, you may be able to get free help to erase your juvenile record by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 489-5048.
 </p>
 
 <style> 
