--- a/results/juvrecord.html
+++ b/results/juvrecord.html
@@ -71,5 +71,5 @@ var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s
 <br>
 
 <p>
-  After you submit this form, a case manager from the WorkPlace, Face Forward  program will try to contact you at the phone number you provided. They will help you confirm that you are eligible for juvenile expungement, and then they will refer you to a lawyer at Connecticut Legal Services for help petitioning to erase your juvenile record.
+  After you submit this form, a case manager from the WorkPlace, Face Forward  program will try to contact you at the phone number you provided. They will help you confirm that you are eligible for juvenile expungement, and then they will refer you to a lawyer at Connecticut Legal Services to see if they can help petition to erase your juvenile record.
 </p>
