--- a/results/juvapply18.html
+++ b/results/juvapply18.html
@@ -7,3 +7,7 @@ layout: page
 <br>
 
 <h4>However, you cannot apply to erase your juvenile record until you are 18.</h4>
+
+<p>&nbsp;</p>
+
+<a href="{{ site.baseurl }}/results/applypetition.html" class="btn btn-success">Learn more about how to petition for erasure</a>
