--- a/results/juvwaitperiod.html
+++ b/results/juvwaitperiod.html
@@ -12,7 +12,7 @@ layout: page
 
 
 <p>
-	You may not have to wait 2 years (or 4 years for a serious juvenile offense) to petition for erasure of your juvenile record if, for example, you have had trouble getting a job, into college, housing, or the military because of your record.
+	However, you cannot apply until 2 years (or 4 years for a serious juvenile offense) have passed since you were discharged from supervision of the court, or from any agency to which the court referred you.
 </p>
 
 <p>&nbsp;</p>
