--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Erase your Connecticut juvenile record!
 ---
 
 <h1>
-  Erase your Connecticut juvenile record!
+  Erase your Connecticut Juvenile Record!
 </h1>
 
 <br><br>
