--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@ title: Erase your Connecticut juvenile record!
 ---
 
 <h1>
-  Erase your Connecticut juvenile record!
+  Erase your Connecticut Juvenile Record!
 </h1>
-<br>
+
+<br><br>
+<br><br>
+<br><br>
+<h1>
+  This project has ended please visit our Get Help page on ctlegal.org:
+</h1>
+<p>
+  <a href="https://ctlegal.org/get-help" ctlegal.org/get-help</a>
+  https://ctlegal.org/get-help
+</p>
+<br><br>
+<br><br>
+<br><br>
+
+
 <p>
 If you were arrested in CT when you were under 18, you probably have a juvenile record.
 </p>
