--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@ title: Erase your Connecticut juvenile record!
 ---
 
 <h1>
-  Erase your Connecticut Juvenile Record!
+  Can I get my juvenile record erased?
 </h1>
+<p>
+Answer a few questions to find out.
+</p>
 
 <br><br>
 
