--- a/results/juvapply18.html
+++ b/results/juvapply18.html
@@ -10,4 +10,12 @@ layout: page
 
 <p>&nbsp;</p>
 
-<a href="{{ site.baseurl }}/results/applypetition.html" class="btn btn-success">Learn more about how to petition for erasure</a>
+
+<h3>You will need legal advice to see if you have a good reason to petition for erasure earlier than normally allowed.</h3>
+
+<br>
+
+<h4Call Statewide Legal Services at 800-453-3320 to apply for help or request help online at cthelp.org</h4>
+
+<a href="https://ctlawhelp.org" class="btn btn-success">Go to ctlawhelp.org</a>
+
