--- a/results/juvapply18.html
+++ b/results/juvapply18.html
@@ -8,14 +8,14 @@ layout: page
 
 <h4>However, you cannot apply to erase your juvenile record until you are 18.</h4>
 
-<p>&nbsp;</p>
+<br>
 
 
 <h3>You will need legal advice to see if you have a good reason to petition for erasure earlier than normally allowed.</h3>
 
 <br>
 
-<h4Call Statewide Legal Services at 800-453-3320 to apply for help or request help online at cthelp.org</h4>
+<h4>Call Statewide Legal Services at 800-453-3320 to apply for help or request help online at cthelp.org</h4>
 
 <a href="https://ctlawhelp.org" class="btn btn-success">Go to ctlawhelp.org</a>
 
