--- a/results/juvapply18.html
+++ b/results/juvapply18.html
@@ -2,9 +2,9 @@
 layout: page
 ---
 
-<h3>Based on your answers, you were arrested as a juvenile.</h3>
+<p>Based on your answers, you were arrested as a juvenile.</p>
 
-<h4>However, you cannot apply to erase your juvenile record until you are 18.</h4>
+<p>However, you cannot apply to erase your juvenile record until you are 18.</p>
 
 <br>
 
