--- a/results/juvapply18.html
+++ b/results/juvapply18.html
@@ -9,10 +9,9 @@ layout: page
 <br>
 
 
-<h3>You will need legal advice to see if you have a good reason to petition for erasure earlier than normally allowed.</h3>
+<p>You will need legal advice to see if you have a good reason to petition for erasure earlier than normally allowed.</p>
 
-
-<h4>Call Statewide Legal Services at 800-453-3320 to apply for help or request help online at cthelp.org</h4>
+<p>Call Statewide Legal Services at 800-453-3320 to apply for help or request help online at cthelp.org</p>
 
 <a href="https://ctlawhelp.org" class="btn btn-success">Go to ctlawhelp.org</a>
 
