--- a/results/juvapply18.html
+++ b/results/juvapply18.html
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-<p>Based on your answers, you were arrested as a juvenile.</p>
+<h1>Based on your answers, you were arrested as a juvenile.</h1>
 
 <p>However, you cannot apply to erase your juvenile record until you are 18.</p>
 
