--- a/faq.html
+++ b/faq.html
@@ -22,9 +22,8 @@ title: FAQs
         <p>
           No, a juvenile record is not a criminal conviction, even if you were “found guilty” in juvenile court.
         </p>
-        <p>If a job application asks you about criminal convictions, you should not reveal your juvenile record.  If you think a job, a college, or a landlord has seen your juvenile record, contact us:
-		</p>
-        <p><a href="{{ site.baseurl }}/applying.html" class="btn btn-default">Learn more & Contact Us &nbsp;<i class="fa fa-chevron-right"></i></a></p>
+        <p>If a job application asks you about criminal convictions, you should not reveal your juvenile record. Call Statewide Legal Services at 800-453-3320 to apply for help or request help online at ctlawhelp.org</p>
+	<p><a href="https://ctlawhelp.org" class="btn btn-default">Go to ctlawhelp.org &nbsp;<i class="fa fa-chevron-right"></i></a></p>
       </div>
     </div>
   </div>
@@ -41,9 +40,7 @@ title: FAQs
     </div>
     <div id="collapse2" class="panel-collapse collapse">
       <div class="panel-body">
-        <p>Remember that free legal help may be available to help you complete the process!</p>
-		<p><a href="{{ site.baseurl }}/applying.html" class="btn btn-default">Learn more & Contact Us &nbsp;<i class="fa fa-chevron-right"></i></a></p>
-		<p>If you are not between 18 and 24 or do not live in one of the above-listed areas, you will need to:</P>
+		<p>If you are not between 18 and 24, you will need to:</P>
 		<ol>
 		<li>Get a copy of your juvenile record from the police department where the incident occurred.</li>
 		<li>Fill out a <a href="http://www.jud.ct.gov/webforms/default.aspx?load_catg=Juvenile#searchTable">petition form</a> (the form "Erasure of Record, Petition/Order ", JD-JM-12 Rev. 10-15, can be found here:<br>
@@ -146,9 +143,9 @@ title: FAQs
         <p>
         <p>People with very low income can find help at:</p>
 		<ul>
-		<li><a href="http://ctlawhelp.org">CTLawHelp</a></li>
-		<li><a href="http://slsct.org">Statewide Legal Services</a> (800) 453-3320</li>
-		<li><a href="http://connlegalservices.org">Connecticut Legal Services</a></li>
+		<li><a href="https://ctlawhelp.org">CTLawHelp</a></li>
+		<li><a href="https://slsct.org">Statewide Legal Services</a> (800) 453-3320</li>
+		<li><a href="https://ctlegal.org">Connecticut Legal Services</a></li>
         </p>
       </div>
     </div>
