--- a/applying.html
+++ b/applying.html
@@ -4,73 +4,7 @@ title: Free Legal Help & Information on Applying
 ---
 
 <br><br>
-<p>
-  If you are between 18 & 24 and live in one of the towns listed below you may be able to get free help to erase your juvenile record by calling the <a href="http://www.workplace.org/" target="blank">WorkPlace</a>, Face Forward program at (203) 610-6562.
-</p>
 
-<br><br>
+<p>Call Statewide Legal Services at 800-453-3320 to apply for help or request help online at ctlawhelp.org</p>
 
-<style> 
-.column {
-    -webkit-columns: 3; /* Chrome, Safari, Opera */
-    -moz-columns: 3; /* Firefox */
-    columns: 3;
-}
-</style>
-
-<div class="column">
-Ansonia<br>
-Beacon Falls<br>
-Bridgeport<br>
-Darien<br>
-Derby<br>
-Easton<br>
-Fairfield<br>
-Greenwich<br>
-Monroe<br>
-New Canaan<br>
-Norwalk<br>
-Oxford<br>
-Seymour<br>
-Shelton<br>
-Stamford<br>
-Stratford<br>
-Trumbull<br>
-Weston<br>
-Westport<br>
-Wilton
-</div>
-
-<br><br>
-
-<p><i>
-  Or fill out the form below
-</i></p>
-<br>
-
-<div id="wufoo-zw3j0vr1rkrzdh">
-Fill out my <a href="https://erasurect.wufoo.com/forms/zw3j0vr1rkrzdh">online form</a>.
-</div>
-<script type="text/javascript">var zw3j0vr1rkrzdh;(function(d, t) {
-var s = d.createElement(t), options = {
-'userName':'erasurect',
-'formHash':'zw3j0vr1rkrzdh',
-'autoResize':true,
-'height':'545',
-'async':true,
-'host':'wufoo.com',
-'header':'show',
-'ssl':true};
-s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-s.onload = s.onreadystatechange = function() {
-var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-try { zw3j0vr1rkrzdh = new WufooForm();zw3j0vr1rkrzdh.initialize(options);zw3j0vr1rkrzdh.display(); } catch (e) {}};
-var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-})(document, 'script');</script>
-
-
-<br><br>
-<p>
-There are many more free Face Forward services
-</p>
-<a href="{{ site.baseurl }}/services.html" class="btn btn-default">Learn more &nbsp;<i class="fa fa-chevron-right"></i></a>
+<a href="https://ctlawhelp.org" class="btn btn-success">Go to ctlawhelp.org</a>
