--- a/results/applypetition.html
+++ b/results/applypetition.html
@@ -2,29 +2,11 @@
 layout: page
 ---
 
-<h3>You will need to get in touch with legal help to see if you have a good reason to petition for erasure earlier than normally allowed.</h3>
+<h3>You will need to find out if you have a good reason to petition for erasure earlier than normally allowed.</h3>
 <br>
 
-<div id="wufoo-zw3j0vr1rkrzdh">
-Fill out my <a href="https://erasurect.wufoo.com/forms/zw3j0vr1rkrzdh">online form</a>.
-</div>
-<script type="text/javascript">var zw3j0vr1rkrzdh;(function(d, t) {
-var s = d.createElement(t), options = {
-'userName':'erasurect',
-'formHash':'zw3j0vr1rkrzdh',
-'autoResize':true,
-'height':'545',
-'async':true,
-'host':'wufoo.com',
-'header':'show',
-'ssl':true};
-s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-s.onload = s.onreadystatechange = function() {
-var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-try { zw3j0vr1rkrzdh = new WufooForm();zw3j0vr1rkrzdh.initialize(options);zw3j0vr1rkrzdh.display(); } catch (e) {}};
-var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-})(document, 'script');</script>
+<br>
 
-<p>
-After you submit this form, a case manager from the WorkPlace, Face Forward  program will try to contact you at the phone number you provided. They will help you confirm that you are eligible for juvenile expungement, and then they will refer you to a lawyer at Connecticut Legal Services to see if they can help petition to erase your juvenile record.
-</p>
+<p>Call Statewide Legal Services at 800-453-3320 to apply for help or request help online at ctlawhelp.org</p>
+
+<a href="https://ctlawhelp.org" class="btn btn-success">Go to ctlawhelp.org</a>
